Fix underline on mobile

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -41,10 +41,10 @@
 
       .underline {
         background: white;
-        bottom: 5px;
+        bottom: 0;
         height: 0;
         position: absolute;
-        width: 40px;
+        width: calc(100% - 40px);
       }
 
       &:hover {
@@ -139,6 +139,15 @@
           height: calc(200px / 4);
           justify-content: flex-end;
           
+          p {
+            position: relative;
+
+            .underline {
+              bottom: -6px;
+              width: 100%;
+            }
+          }
+
           &.active {
             color: white;
           }
